# fraud-detection-network

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: accounts.py  (+6 more)
backend/app/core/: config.py  database.py  exceptions.py  fraud_rules_config.py  logging.py
backend/app/cypher/: analytics.cypher  constraints.cypher  indexes.cypher
backend/app/repositories/: account_repository.py  case_repository.py  customer_repository.py  fraud_repository.py  investigation_repository.py  transaction_repository.py
backend/app/schemas/: account.py  common.py  customer.py  fraud.py  investigation.py  transaction.py
backend/app/services/: account_service.py  analytics_service.py  customer_service.py  fraud_detection_service.py  graph_analytics_service.py  investigation_service.py  risk_scoring_service.py  transaction_service.py
backend/scripts/: benchmark.py  evaluate_detection.py  generate_dataset.py  import_dataset.py  reset_database.py  run_fraud_detection.py  run_graph_analytics.py
backend/scripts/datagen/: config.py  context.py  entities.py  normal_transactions.py  scenarios.py  writer.py
backend/scripts/ingestion/: loaders.py  validation.py
backend/tests/integration/: conftest.py  test_api.py  test_fraud_detection_service.py  test_graph_analytics_service.py  test_ingestion.py  test_investigation_queries.py
backend/tests/unit/: test_generate_dataset.py  test_health.py  test_risk_scoring_service.py
(+49 files in other folders)
