[project]
name = "neo4j-fraud-detection-backend"
version = "0.1.0"
description = "FastAPI backend for the Neo4j Fraud Detection Network platform"
requires-python = ">=3.12"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: FastAPI's `Depends(...)` in a default argument is the documented pattern, not a bug.
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
